istio/deployment/app-deployment-two-versions.yaml
### Deploys two versions of My Stupid Flask API, with shared mysql backend.
### Otherwise identical to version in kubernetes folder.
---
apiVersion: v1
kind: Service
metadata:
  name: userapi-service
spec:
  ports:
  - port: 8000
    name: http-svc # fixed port name to work correctly in kiali
  selector:
    app: userapi
  # type: LoadBalancer ## don't need this any more as we will use istio gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-deployment-v1
  labels:
    app: userapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v1
  template:
    metadata:
      labels:
        app: userapi
        version: v1
    spec:
      containers:
        - name: userapi
          image: lizm666/userapi_mysql:latest # pull image from Docker Hub
          ports:
            - containerPort: 8000
          env: # get enviroment variables for Flask app from secrets
            - name: DB_CONFIG_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: root-password
            - name: DB_CONFIG_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: root-username
            - name: DB_CONFIG_DATABASE
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: db-name
            - name: DB_CONFIG_HOST
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: db-config-host
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: flask-secrets
                  key: flask-secret-key
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-deployment-v2
  labels:
    app: userapi
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v2
  template:
    metadata:
      labels:
        app: userapi
        version: v2
    spec:
      containers:
        - name: userapi
          image: lizm666/userapi_mysql:latest # pull image from Docker Hub
          ports:
            - containerPort: 8000
          env: # get enviroment variables for Flask app from secrets
            - name: DB_CONFIG_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: root-password
            - name: DB_CONFIG_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: root-username
            - name: DB_CONFIG_DATABASE
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: db-name
            - name: DB_CONFIG_HOST
              valueFrom:
                secretKeyRef:
                  name: mysql-credentials
                  key: db-config-host
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: flask-secrets
                  key: flask-secret-key
