istio/deployment/gateway.yaml
### Set up a gateway for incoming traffic
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # default
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
