istio/deployment/virtual-service-default.yaml
### Default virtual service - all traffic allowed in and no routing
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service 
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /  # all incoming traffic permitted
    route:
    - destination: # send all traffic to userapi-service
        host: userapi-service
